p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  labels:
    app: app3
spec:
  replicas: 1

  selector:
    matchLabels:
      app: app3

  template:
    metadata:
      labels:
        app: app3
  
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
      
      containers:
        - name: app3
          image: genegrigorian/inception-of-things-app:v1
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: http
